--- a/assets/img/GigeoApp.html
+++ b/assets/img/GigeoApp.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="UTF-8">
+<!-- saved from url=(0022)http://127.0.0.1:5500/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!--cdn font awesome-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> 
-      <!-- cdn google fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="./GigeoApp_files/all.min.css"> 
       <!-- css from sass compiler -->
-      <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="stylesheet" href="./GigeoApp_files/style.css">
       <title>GigeoApp</title>
    </head>
-   <body>
+   <body cz-shortcut-listen="true">
       <nav class="navbar navbar-light bg-light">
          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-               <img src="./assets/img/icono.png" alt="" width="100" height="30 class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="http://127.0.0.1:5500/#">
+               <img src="./GigeoApp_files/icono.png" alt="" width="100" height="30 class=" d-inline-block="" align-text-top"="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -24,22 +22,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                     <a class="nav-link " aria-current="page" href="#">
+                     <a class="nav-link " aria-current="page" href="http://127.0.0.1:5500/#">
                         <i class=" icono fas fa-search"></i>
                      </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" aria-current="page" href="#">
+                     <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/#">
                         <i class=" icono fas fa-video"></i>
                      </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" aria-current="page" href="#">
+                     <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/#">
                         <i class=" icono fas fa-plus"></i>
                      </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" aria-current="page" href="#">
+                     <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/#">
                         <i class=" icono fas fa-bell"></i>
                      </a>
                   </li>
@@ -56,7 +54,7 @@
          <div class="container">
             <div class="row">
                <div class="profile__thumbnail col-sm-12 col-md-12">
-                  <img src="./assets/img/profile-image.png" alt="YukiMukami" class="profile__thumbnail--img">
+                  <img src="./GigeoApp_files/profile-image.png" alt="YukiMukami" class="profile__thumbnail--img">
                   <div class="profile__thumbnail--info">
                      <h5>Yuki Mukami</h5>
                      <p>30.000 seguidores</p>
@@ -78,72 +76,72 @@
             <div class="row">
                <div class=" col-sm-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
                   <figure class="figure">
-                     <img src="./assets/img/image-1.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                     <img src="./GigeoApp_files/image-1.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                      <h6 class="figure__title">
                         Después de la vela - Yuki Mukami
                      </h6>
-                     <figcaption class="figure-caption">16k vistas - 1 semana atrás.</figcaption>
+                     <figcaption class="figure-caption text-center">16k vistas - 1 semana atrás.</figcaption>
                   </figure>
 
                   <figure class="figure">
-                     <img src="./assets/img/image-2.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                     <img src="./GigeoApp_files/image-2.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                      <h6 class="figure__title">
                         Far Away - Yuki Mukami
                      </h6>
-                     <figcaption class="figure-caption">20k vistas - 1 mes atrás.</figcaption>
+                     <figcaption class="figure-caption text-center">20k vistas - 1 mes atrás.</figcaption>
                   </figure>      
                </div>
                
                <div class=" col-sm-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
                   <figure class="figure">
-                     <img src="./assets/img/image-3.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                     <img src="./GigeoApp_files/image-3.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                      <h6 class="figure__title">
                         City - Yuki Mukami
                      </h6>
-                     <figcaption class="figure-caption">100k vistas - 1 mes atrás.</figcaption>
+                     <figcaption class="figure-caption text-center">100k vistas - 1 mes atrás.</figcaption>
                   </figure>
                   <figure class="figure">
-                     <img src="./assets/img/image-4.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                     <img src="./GigeoApp_files/image-4.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                      <h6 class="figure__title">
                         A Yuki Tale - Yuki Mukami
                      </h6>
-                     <figcaption class="figure-caption">1m vistas - 1 año atrás.</figcaption>
+                     <figcaption class="figure-caption text-center">1m vistas - 1 año atrás.</figcaption>
                   </figure>
                </div>
 
                <div class=" col-sm-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
                      <figure class="figure">
-                        <img src="./assets/img/image-5.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                        <img src="./GigeoApp_files/image-5.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                         <h6 class="figure__title">
                            Mapocho - Yuki Mukami
                         </h6>
-                        <figcaption class="figure-caption">100k vistas - 1 mes atrás.</figcaption>
+                        <figcaption class="figure-caption text-center">100k vistas - 1 mes atrás.</figcaption>
                      </figure>
 
                      <figure class="figure">
-                        <img src="./assets/img/image-6.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                        <img src="./GigeoApp_files/image-6.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                         <h6 class="figure__title">
                            Lucky Days - Yuki Mukami
                         </h6>
-                        <figcaption class="figure-caption">40k vistas - 3 meses atrás.</figcaption>
+                        <figcaption class="figure-caption text-center">40k vistas - 3 meses atrás.</figcaption>
                      </figure>
                </div>
 
                <div class=" col-sm-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
                   <figure class="figure">
-                     <img src="./assets/img/image-7.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                     <img src="./GigeoApp_files/image-7.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                      <h6 class="figure__title">
                         30 days in My House - Yuki Mukami
                      </h6>
-                     <figcaption class="figure-caption">10k vistas - 4 meses atrás.</figcaption>
+                     <figcaption class="figure-caption text-center">10k vistas - 4 meses atrás.</figcaption>
                   </figure>
 
                   <figure class="figure">
-                     <img src="./assets/img/image-8.png" class="figure-img img-fluid w-100" alt="gallery_img">
+                     <img src="./GigeoApp_files/image-8.png" class="figure-img img-fluid w-100 mb-4" alt="gallery_img">
                      <h6 class="figure__title">
                         Santiago - Yuki Mukami
                      </h6>
-                     <figcaption class="figure-caption">40k vistas - 3 meses atrás.</figcaption>
+                     <figcaption class="figure-caption text-center">40k vistas - 3 meses atrás.</figcaption>
                   </figure>
                </div>
             </div>
@@ -153,6 +151,44 @@
          <!-- fin container -->
       </section>
       <!-- cdn bootstrapjs -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   </body>
-</html>
+      <script src="./GigeoApp_files/bootstrap.bundle.min.js.descarga" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   <!-- Code injected by live-server -->
+<script type="text/javascript">
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
+
+</body></html>
